<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logoForgotImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/forgotForgotTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_view_login" />

    <TextView
        android:id="@+id/forgotForgotTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:text="@string/loginLoginTextView"
        android:textColor="@color/colorTextViewBlack"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailForgotEditText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotForgotTextView"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:hint="@string/emailLoginEditText"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/colorEditText"
        android:textColorHint="@color/colorEditTextHint"
        android:textColor="@color/colorEditTextText"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/passwordLoginEditText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailForgotEditText"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:hint="@string/passwordLoginEditText"
        android:background="@drawable/background_edit_text"
        android:backgroundTint="@color/colorEditText"
        android:textColorHint="@color/colorEditTextHint"
        android:textColor="@color/colorEditTextText"
        android:textSize="20sp"
        />

    <Button
        style="@style/Button"
        android:id="@+id/loginLoginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/loginLoginButton"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotLoginTextView" />

    <TextView
        android:id="@+id/forgotLoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/forgotLoginTextView"
        android:textColor="@color/colorTextViewBlack"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordLoginEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordLoginEditText" />

    <LinearLayout
        android:id="@+id/signUpLoginLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLoginButton">

        <TextView
            android:id="@+id/signUpLoginTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/signupLoginTextView1"
            android:textColor="@color/colorTextViewGray"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signUpLoginTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_weight="1"
            android:text="@string/signupLoginTextView2"
            android:textColor="@color/colorTextViewOrange"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>