<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".QuizFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/quiz2HeadingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aquizHeading"
            android:textColor="@color/colorOrange"
            android:textSize="33dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/proxima_nova_regular"/>

        <TextView
            android:id="@+id/rulesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arules"
            android:textColor="@color/colorBlack"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@id/quiz2HeadingTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/proxima_nova_regular"/>

        <TextView
            android:id="@+id/rulesInfoTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rulesQuiz"
            android:textColor="@color/colorBlack"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/rulesTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/proxima_nova_regular"/>

        <Button
            android:id="@+id/startQuizButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/proxima_nova_regular"
            android:text="@string/startQuizButton"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progressRing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.5"
            style="@style/AVLoadingIndicatorView.Large"
            android:visibility="invisible"
            app:indicatorName="BallClipRotatePulseIndicator"
            app:indicatorColor="@color/colorOrange" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>